# StreamingImageSequence

./: .gitattribute  .gitattributes  .gitignore  .npmignore  CHANGELOG.md  LICENSE  LICENSE.md  README.md  README_JP.md  Third Party Notices.md  package.json
.yamato/: StreamingImageSequence-pack.yml  StreamingImageSequence-promotion.yml  StreamingImageSequence-publish.yml  StreamingImageSequence-test.yml  StreamingImageSequence-updated-dependencies-test.yml  StreamingImageSequence.metafile  docs-StreamingImageSequence.yml  promotion-MovieProxy.yml  promotion-StreamingImageSequence.yml  upm-ci-MovieProxy.yml  upm-ci-StreamingImageSequence.yml
AEPsamples/: UCL.txt  testProject.aep
AE~/Plugins/: AEjson.jsx
AE~/Samples/: AeConvert.jstimeline  Footage_A.jspseq  Footage_B.jspseq
Documentation~/: FeatureCachingRenderResults.md  FeatureFadingImages.md  FeaturePlayingSequentialImages.md  FrameMarkers.md  ImportingImages.md  Preferences.md  TableOfContents.md  index.md
Documentation~/en/: FaderPlayableAsset.md  FeatureCachingRenderResults.md  FeatureFadingImages.md  FeaturePlayingSequentialImages.md  FrameMarkers.md  ImportingImages.md  Preferences.md  RenderCachePlayableAsset.md  StreamingImageSequencePlayableAsset.md
Editor/: AssemblyInfo.cs  BGJobCacheChecker.cs  EditorPeriodicJob.cs  EditorTextures.cs  FrameMarkerEditor.cs  FrameMarkerInspector.cs  ImageSequenceImportWindow.cs  ImageSequenceImporter.cs  MovieProxyToSpriteAnimation.cs  MovieProxyWindow.cs  PictureFileImportWindow.cs  PictureFileImporter.cs  PreviewTexture.cs  PreviewTextureFactory.cs  Shortcuts.cs  StreamingImageSequenceMenu.cs  StreamingImageSequencePlayableAssetEditor.cs  StreamingImageSequencePlayableAssetInspector.cs  StreamingImageSequencePreview.cs  StreamingImageSequenceToSpriteAnimation.cs  StreamingImageSequenceWindow.cs  Unity.MovieProxy.Editor.asmdef  Unity.StreamingImageSequence.Editor.asmdef  UseImageMarkerEditor.cs  UseImageMarkerInspector.cs
Plugins/: PictureLoaderNativePlugin.sln
Plugins~/: CMakeLists.txt  Project.sln
Plugins~/CommonLib/: CCriticalSectionController.cpp  CCriticalSectionController.h  CCriticalSectionObject.cpp  CCriticalSectionObject.h  CommonLib.cpp  CommonLib.h  CommonLibWin.vcxproj  CommonLibWin.vcxproj.filters  CriticalSection.cpp  CriticalSection.h  CriticalSectionController.cpp  CriticalSectionController.h  CriticalSectionObject.cpp  CriticalSectionObject.h  CriticalSectionType.h  ReadMe.txt  ReadStatus.h  Types.h
Plugins~/CommonLib/Win/: CommonLibWin.cpp
Plugins~/Docs/en/: BuildPlugins.md
Plugins~/DrawOverWindow/: DrawOverWindow.h  DrawOverWindow.vcxproj  stdafx.cpp
Plugins~/Drawer/: Drawer.cpp  Drawer.h  Drawer.mm  DrawerWin.vcxproj  DrawerWin.vcxproj.filters  RenderAPI.h  RenderAPI_D3D11.cpp  RenderAPI_D3D12.cpp  desktop.ini  stdafx.h
Plugins~/Drawer/GLEW/: glew.c
Plugins~/Loader/: Loader.cpp  Loader.h  Loader.mm  Loader.vcxproj  LoaderUtility.cpp  LoaderUtility.h  LoaderWin.vcxproj  LoaderWin.vcxproj.filters  ReadMe.txt
Plugins~/Loader/Mac/: LoaderMac.mm
Plugins~/Loader/Win/: LoaderWin.cpp
Plugins~/PictureLoaderNativePlugin.xcworkspace/: contents.xcworkspacedata
Plugins~/Project/: Config.xcconfig
Plugins~/Project/Project.xcodeproj/: project.pbxproj
Plugins~/Project/Project.xcodeproj/xcshareddata/xcschemes/: Plugin.xcscheme
Plugins~/Src/CommonLib/: CMakeLists.txt  CommonLib.cpp  CommonLib.h  CriticalSection.cpp  CriticalSection.h  CriticalSectionController.cpp  CriticalSectionController.h  CriticalSectionObject.cpp  CriticalSectionObject.h  CriticalSectionType.h  ImageData.cpp  ImageData.h  MemoryUtility.cpp  MemoryUtility.h  ReadResult.h  Types.h  stdafx.h  targetver.h
Plugins~/Src/CommonLib/Include/CommonLib/: CommonLib.h  CriticalSection.h  CriticalSectionController.h  CriticalSectionObject.h  CriticalSectionType.h  Types.h
Plugins~/Src/DrawOverWindow/: CMakeLists.txt  DrawOverWindow.cpp  DrawOverWindow.h  DrawOverWindow.vcxproj
Plugins~/Src/Loader/: CMakeLists.txt  ImageCatalog.cpp  ImageCatalog.h  ImageCollection.cpp  ImageCollection.h  ImageData.cpp  ImageData.h  ImageMemoryAllocator.cpp  ImageMemoryAllocator.h  Loader.cpp  Loader.h  LoaderConstants.h  LoaderUtility.cpp  LoaderUtility.h  ReadStatus.h  TGALoader.h  stdafx.h
Plugins~/Src/Loader/Mac/: LoaderMac.mm
Plugins~/Src/Loader/Win/: LoaderWin.cpp  TGALoader.cpp
Plugins~/Src/Project.xcworkspace/: contents.xcworkspacedata
Plugins~/Src/Project/Project.xcodeproj/: project.pbxproj
Plugins~/Src/Project/Project.xcodeproj/xcshareddata/xcschemes/: Plugin.xcscheme
Plugins~/Src/StreamingImageSequence/: CMakeLists.txt  ImageCatalog.cpp  ImageCatalog.h  ImageCollection.cpp  ImageData.cpp  ImageMemoryAllocator.cpp  Loader.cpp  Loader.vcxproj.filters  LoaderUtility.cpp  stdafx.h
Plugins~/Src/StreamingImageSequence/Include/StreamingImageSequence/: FileType.h  ImageCatalog.h  ImageCollection.h  ImageData.h  ImageFormat.h  ImageMemoryAllocator.h  Loader.h  LoaderUtility.h  ReadStatus.h
Plugins~/Src/StreamingImageSequence/Mac/: LoaderMac.mm
Plugins~/Src/StreamingImageSequence/Win/: LoaderWin.cpp  LoaderWin.h  TGALoader.cpp
Plugins~/Tests/CommonLib/: CMakeLists.txt  CommonLibTestMain.cpp  MemoryUtilityTest.cpp
Plugins~/Tests/Loader/: CMakeLists.txt  FileUtility.cpp  FileUtility.h  LoaderTestMain.cpp  TestUtility.cpp  TestUtility.h  main.cpp
Plugins~/Tests/StreamingImageSequence/: 01_BasicImageLoadTest.cpp  02_AutoImageUnloadTest.cpp  03_Benchmark.cpp  AutoImageUnloadTest.cpp  BasicImageLoadTest.cpp  BasicLoadTest.cpp  Benchmark.cpp  CMakeLists.txt  FileUtility.cpp  SISTestMain.cpp  TestUtility.cpp  TestUtility.h
Plugins~/Tests/StreamingImageSequence/Utilities/: TestUtility.cpp  TestUtility.h
Runtime/: AssemblyInfo.cs  ImageData.cs  ImageDataExtensions.cs  PeriodicJob.cs  ReadResult.cs  ReadResultExtensions.cs  StreamingImageSequenceConstants.cs  StreamingImageSequencePlugin.cs  Unity.MovieProxy.asmdef  Unity.StreamingImageSequence.asmdef  UpdateManager.cs
Scripts~/: sync_package_info.sh
Tests/: Unity.StreamingImageSequence.EditorTests.asmdef
(+457 files in other folders)
